Header now position fixed so we can have just 1 scrollbar

--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -34,14 +34,26 @@ body, html {
 }
 
 body > .ember-view {
-    height: 100%;
     width: 100%;
+    height: 100%;
+    padding-top: 145px;
+}
+
+.site-header {
+    width: 100%;
+    height: 145px;
+    position: fixed;
+    top: 0;
+    z-index: 3;
+    > .row {
+        margin-top: 20px;
+    }
 }
 
 #SiteWrapper, #MainWrapper, #NavPage { // #MainWrapper
     color: $color-font-main;
     background-color: $color-bg;
-    height: 100%;
+    //height: 100%;
     margin: 0px auto;
     overflow: auto;
     /* ADDITIONAL GRID STYLES */
